# iac-scanner

./: .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements.txt  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES_v0.4.0.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: blog-release.yml  ci.yml  nightly-e2e.yml  publish-nag-pypi.yml  publish-pypi.yml  security.yml
docs/: Gemfile  _config.yml  blog.md  index.md  keyless.md  tutorial.md
docs/_posts/: 2026-02-21-iac-scanner-intro.md  2026-04-19-iac-scanner-0-4.md
samples/cdk/: .gitignore  README.md  cdk.json  index.ts  package.json  tsconfig.json
samples/cdk/lib/: demo-stack.ts
samples/tf/: main.tf
scripts/: bump_version.py  check_version.py  generate_blog_post.py
src/iac_scanner/: __init__.py  cache.py  cli.py  cost.py  factory.py  mcp_server.py  models.py
src/iac_scanner/llm/: __init__.py  providers.py
src/iac_scanner/orchestration/: __init__.py  hybrid.py  runner.py  tasks.py
src/iac_scanner/output/: __init__.py  report.py  sarif.py
src/iac_scanner/rules/: __init__.py  checkov.py  engine.py
src/iac_scanner/scanners/: __init__.py  _filters.py  base.py  cdk.py  terraform.py
tests/: __init__.py  conftest.py  test_cache.py  test_checkov_adapter.py  test_cli_branches.py  test_cost.py  test_factory_and_scan.py  test_filters.py  test_hybrid.py  test_mcp_server.py  test_providers.py  test_report.py  test_rules_engine.py  test_runner.py  test_sarif.py  test_scanners_edge.py  test_smoke_cli.py
