[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iac-scanner"
version = "0.2.0"
description = "CLI to scan and fix Terraform and CDK IaC with LangChain-orchestrated agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
    "build>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
iac-scan = "iac_scanner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
