[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iac-scanner"
version = "0.3.2"
description = "CLI to scan and fix Terraform and CDK IaC with LangChain-orchestrated agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Bishwas Jha", email = "jha.bishwas@gmail.com" }
]
keywords = [
    "terraform",
    "cdk",
    "aws",
    "aws-cdk",
    "aws-cdk-lib",
    "aws-cdk-lib-constructs",
    "constructs",
    "azure",
    "azure-cdk",
    "azure-cdk-lib",
    "azure-cdk-lib-constructs",
    "google",
    "google-cdk",
    "google-cdk-lib",
    "google-cdk-lib-constructs",
    "iac",
    "iac-scanner",
    "iac-scanner-cli",
    "iac-scanner-langchain",
    "iac-scanner-langchain-orchestrated",
    "iac-scanner-langchain-orchestrated-agents",
    "iac-scanner-langchain-orchestrated-agents-terraform",
    "iac-scanner-langchain-orchestrated-agents-cdk",
    "iac-scanner-langchain-orchestrated-agents-terraform-cdk",
    "iac-scanner-langchain-orchestrated-agents-terraform-cdk-langchain",
    "infrastructure-as-code",
    "security",
    "langchain",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
    "build>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
iac-scan = "iac_scanner.cli:main"

[project.urls]
Homepage = "https://github.com/bishwasjha/iac-scanner"
Repository = "https://github.com/bishwasjha/iac-scanner"
Documentation = "https://bishwasjha.github.io/iac-scanner/"
Issues = "https://github.com/bishwasjha/iac-scanner/issues"

[tool.setuptools.packages.find]
where = ["src"]
